--- a/5-objects/_objects.lists.scss
+++ b/5-objects/_objects.lists.scss
@@ -3,39 +3,76 @@
 =====================================*/
 
 
-
 /* ===== GRID LIST ========================================================== */
 
+
 /* List in the form of a table-like grid. */
-$grid-list-border:          1px solid $darker-border-colour;
-$grid-list-items-per-row:   3;
 
+$grid-list-border: 1px solid $darker-border-colour;
+$grid-list-items-per-row: 3;
 .grid-list {
-
     position: relative;
     @include clearfix();
     margin: 0;
     width: 100%;
-
     // Item / Cell
     > li {
         float: left;
         display: block;
         width: 100% / $grid-list-items-per-row;
-
-        &:nth-child(3n+1) { clear: left; }
-
-        // Tablet
-        @include media( $tablet ) {
-            width: 50%;
-            &:nth-child(3n+1) { clear: none; }
-            &:nth-child(2n+1) { clear: left; }
+        &:nth-child(3n+1) {
+            clear: left;
         }
-
+        // Tablet
+        @include media( $tablet) {
+            width: 50%;
+            &:nth-child(3n+1) {
+                clear: none;
+            }
+            &:nth-child(2n+1) {
+                clear: left;
+            }
+        }
         // Mobile
-        @include media( $mobile-large-and-smaller ) {
+        @include media( $mobile-large-and-smaller) {
             width: 100%;
             clear: left;
+        }
+    }
+}
+
+.number-list {
+    counter-reset: li;
+    margin-left: -0.5em;
+    margin-right: -0.5em;
+    margin-top: 1em;
+    @include media( $tablet-and-bigger) {
+        padding-left: 0.25em;
+        margin-left: 0;
+        margin-right: 0;
+    }
+    > li {
+        position: relative;
+        margin: 0 0 1em 1.5em;
+        padding: 0.5em 1em;
+        list-style: none;
+        border-top: 1px solid $grey-gallery;
+        border-left: 3px solid $grey-dusty-gray;
+        &::before {
+            content: counter(li);
+            counter-increment: li;
+            position: absolute;
+            top: -1px;
+            left: -2em;
+            -moz-box-sizing: border-box;
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+            width: 2em;
+            font-size: 1.25em;
+            padding: 0.15em;
+            border-top: 1px solid $grey-gallery;
+            font-weight: bold;
+            text-align: center;
         }
     }
 }
