--- a/6-components/_components.staff-block.scss
+++ b/6-components/_components.staff-block.scss
@@ -5,9 +5,9 @@
 .staff-block {
     display: flex;
     .staff-image {
-        width: 20%;
-        margin-right: 1.5em;
-        @include media ($mobile) {
+        width: 15%;
+        margin-right: 1.25em;
+        @include media ($mobile-large-and-smaller) {
             display: none;
         }
         img {
