Fixes unordered list alignment, tags vertical positioning (FF) and corrupted positioning of tags inside the unordered list.

--- a/2-tools/_tools.mixins.scss
+++ b/2-tools/_tools.mixins.scss
@@ -47,11 +47,13 @@
  * @size            - Size of the square.
  * @colour          - Colour of the bullet.
  */
-@mixin make-list-square-bullet( $size, $colour: $text-fade-colour ) {
+@mixin make-list-square-bullet( $indent-right, $colour: $text-fade-colour ) {
     &:before {
-        @include objectify( inline-block, $position: static );
-        @include size( $size );
-        background-color: $colour;
+        @include objectify( block, "\25A0" );
+        top: -.1em;
+        float: left;
+        width: $indent-right;
+        color: $colour;
 
         @content;
     }
