Adds new colour, highlights warning strip/nested block.

--- a/1-settings/_settings.colours.scss
+++ b/1-settings/_settings.colours.scss
@@ -58,6 +58,8 @@ $grey-stack:           #808080;
 $grey-mako:            #475153;
 $grey-mine-shaft:      #333;
 
+$yellow-spring-wood:   #f4f4e9;
+
 // ORINGINAL BLACK FOR TEXT
 $black-tundora:        #444;
 
