Improves alignment of form inside requirements, adds another variant of images in simple plain image block.

--- a/6-components/_components.degree-requirements.scss
+++ b/6-components/_components.degree-requirements.scss
@@ -3,7 +3,7 @@
 ================================*/
 
 .entry-requirements {
-    .form { margin-bottom: .7em; }
+    .form { margin-bottom: $base-margin; }
     .control-group .link-action { margin-left: .35em; }
     .requirements-list { overflow: hidden; }
 
