Adds warning-like paragraph.

--- a/5-objects/_objects.widgets.scss
+++ b/5-objects/_objects.widgets.scss
@@ -447,3 +447,9 @@ $popup-border:   #fff;
         .content-simple { padding-top: $base-margin;}
     }
 }
+
+/** Simple warning wrapper. */
+.warning {
+    background-color: $yellow-spring-wood;
+    padding: 1em;
+}
