--- a/6-components/_components.quote-block.scss
+++ b/6-components/_components.quote-block.scss
@@ -118,8 +118,8 @@ $bg-color: $grey-gallery;
     }
 }
 
-.separated {
-    .separated {
-        border-bottom: 0;
-    }
-}
+// .separated {
+//     .separated {
+//         border-bottom: 0;
+//     }
+// }
