--- a/5-objects/_objects.lists.scss
+++ b/5-objects/_objects.lists.scss
@@ -19,7 +19,7 @@ $grid-list-items-per-row: 3;
     > li {
         float: left;
         display: block;
-        width: 100% / $grid-list-items-per-row;
+        width: 98% / $grid-list-items-per-row;
         &:nth-child(3n+1) {
             clear: left;
         }
@@ -37,6 +37,21 @@ $grid-list-items-per-row: 3;
         @include media( $mobile-large-and-smaller) {
             width: 100%;
             clear: left;
+        }
+    }
+}
+
+.offering-list {
+    .grid-list {
+        & li {
+            margin: 0.2em;
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+            @include hoverify {
+                box-shadow: none;
+            }
+            .area {
+                padding: 0;
+            }
         }
     }
 }
