--- a/6-components/_components.navigation.scss
+++ b/6-components/_components.navigation.scss
@@ -6,26 +6,25 @@
 /* ===== NAVIGATION MENU - TABS ============================================= */
 
 // Tabed menu - general
-$menu-tabbed-padding-horiz:            .7em !default;
-$menu-tabbed-padding-vertic:           .9em !default;
+$menu-tabbed-padding-horiz: .7em !default;
+$menu-tabbed-padding-vertic: .9em !default;
 // Single tab (~ menu item)
-$menu-tabbed-item-max-width:           $base-width / 4 !default; // accommodates up to 4 items
-$menu-tabbed-item-triangle-width:      1.5em !default;
-$menu-tabbed-item-triangle-height:     ( $menu-tabbed-item-triangle-width / 3 ) !default;
-$menu-tabbed-item-label-colour:        $grey-stack !default;
-$menu-tabbed-item-hover-label-colour:  $blue-curious-blue !default;
-$menu-tabbed-item-hover-bg-colour:     $grey-alto !default;
+$menu-tabbed-item-max-width: $base-width / 4 !default; // accommodates up to 4 items
+$menu-tabbed-item-triangle-width: 1.5em !default;
+$menu-tabbed-item-triangle-height: ( $menu-tabbed-item-triangle-width / 3) !default;
+$menu-tabbed-item-label-colour: $grey-stack !default;
+$menu-tabbed-item-hover-label-colour: $blue-curious-blue !default;
+$menu-tabbed-item-hover-bg-colour: $grey-alto !default;
 $menu-tabbed-item-active-label-colour: $white !default;
-$menu-tabbed-item-active-bg-colour:    $green-victoria !default;
+$menu-tabbed-item-active-bg-colour: $green-victoria !default;
 
 /* Menu or submenu using tab-like layout of its items. */
+
 .menu-tabbed {
     display: table;
     table-layout: fixed;
     width: 100%;
     text-align: center;
-
-
     // 1st level menu items
     & > li {
         position: relative;
@@ -35,17 +34,17 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
         max-width: $menu-tabbed-item-max-width;
         vertical-align: middle;
         outline: 0;
-
         .ico:before {
             vertical-align: top;
             margin-right: .5em;
         }
-
+        &:first-child {
+            border-right: 1px solid $grey-alto;
+        }
         // Selected or activated tab
         &.active {
             color: $white;
             background-color: $menu-tabbed-item-active-bg-colour;
-
             & > a {
                 color: inherit;
                 @include hoverify {
@@ -73,7 +72,6 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
             line-height: 1;
             color: $grey-stack;
             text-decoration: none;
-
             @include hoverify {
                 background-color: $menu-tabbed-item-hover-bg-colour;
                 color: $menu-tabbed-item-hover-label-colour;
@@ -81,26 +79,31 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
             }
         }
     }
+    &.schedule-tabs {
+        & li > a {
+            box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
+            @include hoverify {
+                box-shadow: none;
+            }
+        }
+    }
 }
 
 // Makes two col button container with one button left & one right
 .two-btn-nav {
-    @include make-table-column( $two-btn-layout );
-
+    @include make-table-column( $two-btn-layout);
     p {
         font-size: 80%;
         color: $grey-stack;
     }
-
-    .btn { margin: 0; }
-
+    .btn {
+        margin: 0;
+    }
     &:first-child {
         padding-right: .5em;
     }
-
     &:last-child {
         padding-left: .5em;
-
         .two-btn-wrap {
             float: right;
             text-align: right;
@@ -109,14 +112,15 @@ $menu-tabbed-item-active-bg-colour:    $green-victoria !default;
 }
 
 .two-col-layout {
-    .two-btn-nav.block:last-child { padding-top: $block-margin; }
+    .two-btn-nav.block:last-child {
+        padding-top: $block-margin;
+    }
 }
 
 // Sticks panels to the bottom
 .mobile-sticky-down {
     box-shadow: rgba(#000, .12) 0 -1px 10px;
-
-    @include media( $mobile-large-and-smaller ) {
+    @include media( $mobile-large-and-smaller) {
         &.sector {
             z-index: $z-index-top;
             @include position( fixed, null 0 0 0);
