[FIX] Adds Firefox (OS X) antialiasing to make the UI consistently looking compared to other browsers, 'next' slideshow's button no longer overlays tabbed menu.

--- a/2-tools/_tools.mixins.scss
+++ b/2-tools/_tools.mixins.scss
@@ -49,11 +49,12 @@
  */
 @mixin make-list-square-bullet( $indent-right, $colour: $text-fade-colour ) {
     &:before {
-        @include objectify( block, "\25A0" );
+        @include objectify( block, "\25A0" ); // Square character
         top: -.1em;
         float: left;
         width: $indent-right;
         color: $colour;
+        pointer-events: none; // Removes the interference if the bullet point covers links
 
         @content;
     }
