--- a/6-components/_components.image-slide-show.scss
+++ b/6-components/_components.image-slide-show.scss
@@ -91,7 +91,7 @@
                     background-color: rgba($grey-stack, 0.4);
                     cursor: pointer;
                 }
-                z-index: $z-index-top;
+                z-index: $z-index-middle;
                 text-align: middle;
                 height: 100%;
                 color: $white;
