--- a/4-base/_base.typography.scss
+++ b/4-base/_base.typography.scss
@@ -41,6 +41,11 @@ $heading-weight:        $weight-semibold;
     line-height: $heading-line-height;
 }
 
+body {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+
 h1 {
     font-size: 2.1em;
 }
@@ -62,10 +67,6 @@ h5 {
 }
 
 
-/* Paragraphs */
-p {
-}
-
 q:before {
     content: '';
 }
@@ -84,11 +85,3 @@ a, a > *:before, a > *:after, .tooltip-icon  {
 }
 
 /* Lists */
-ul, ol {
-}
-
-ul {
-}
-
-ol {
-}
